[package]
name = "my-fake-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msql-srv = { git = "https://github.com/killertux/msql-srv.git", branch = "feature/secure-connection" }
# msql-srv = { path = "../msql-srv" }
itertools = "0.10"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = {version = "0.11", features = ["blocking", "json"]}
ritelinked = "0.3"
sqlparser = "0.16"
chrono = "0.4"
dirs = "4.0"
anyhow = "1"
thiserror = "1"
dashmap = "5"